[FIX]서버 수정
